syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.atlas.platform.api.server.grpc.protobuf.user";

import "google/protobuf/empty.proto";

package user;

service UserService {
  rpc ListUser (ListUserRequestProto) returns (ListUserResponseProto) {};
}

message ListUserRequestProto {
  repeated int32 id = 1;
}

message UserProto {
  int32 id = 1;
  string username = 2;
  string first_name = 3;
  string last_name = 4;
  string email = 5;
  string phone_number = 6;
  string role = 7;
}

message ListUserResponseProto {
  repeated UserProto user = 1;
}
